--- a/研究点.md
+++ b/研究点.md
@@ -8,6 +8,10 @@
 
 多模态对抗攻击是指在多模态任务中，通过对输入数据（如图像和文本）进行精心设计的扰动，来欺骗或操纵多模态模型，使其做出错误的预测或行为。这种攻击利用了模型在处理多模态数据时的弱点，尤其是在模型的预训练阶段和微调阶段的潜在差异。
 
+<img src="/Users/dengbin/Library/Application Support/typora-user-images/image-20241023104306400.png" alt="image-20241023104306400" style="zoom:50%;" />
+
+<div style="text-align: center; font-size: 14px">图1 图像描述任务中的多模态攻击展示</div>
+
 研究多模态对抗攻击是为了测试和揭示多模态大模型在实际应用中的潜在安全风险和脆弱性。通过研究多模态对抗攻击，可以更全面地评估这些模型在实际对抗环境中的鲁棒性和安全性并且可以为多模态模型对抗训练提供数据、提升多模态模型的鲁棒性。
 
 - 研究点
