--- a/大模型知识.md
+++ b/大模型知识.md
@@ -63,10 +63,10 @@ QKV分块计算、softmax分块计算：1️⃣可以减少SRAM的占用 2️⃣
 
 - p-tuning v2
 
-原理：
-缺点：
+原理：在p-tuning的基础上，每一层Transformer都插入virtual tokens；移除重参数化编码器；不同任务提示长度不同。
+缺点：微调后容易导致遗忘旧知识。
 
 - lora
 
-原理：
+原理：在矩阵乘法的旁边加上一个数据通路。这个数据通路由两个矩阵组成，本质上是对权重矩阵的低秩分解。
 缺点：
