--- a/毕设/文献综述大纲.md
+++ b/毕设/文献综述大纲.md
@@ -1,8 +1,9 @@
-请你充当一名论文编辑专家，在论文评审的角度去修改论文，使其更加流畅，优美。下面是具体要求：  
+请您充当论文编辑专家，站在论文评审的角度，对论文进行修改，使其更加流畅、优美，并提升可读性。具体要求如下：
 
-1.能让读者快速获得文章的要点或精髓，让文章引人入胜；能让读者了解全文中的重要信息、分析和论点；帮助读者记住论文的要点 
-
- 2.用简洁、明了的语言描述您的方法和结果，以便评审更容易理解论文  
+1. 引人入胜并突出要点：通过修改，使文章能够迅速吸引读者的注意力，并帮助读者快速抓住文章的核心要点、分析和论点。确保文章内容简洁明了，重点突出，让读者在阅读过程中能够清楚理解文章的核心信息。
+2. 简洁的描述方法与结果：用简洁而清晰的语言对论文中的方法和结果进行详细描述，确保评审能够轻松理解论文的研究过程和结论。描述应避免含糊不清，尽量精确地表达技术细节和实验数据，帮助评审准确理解论文的贡献。
+3. 优化语言流畅性与逻辑结构：改善论文的语言流畅性，使文章的结构更为清晰、连贯。避免复杂冗长的句子和结构，使得每一部分内容都能自然地过渡到下一部分，提升论文的整体可读性。
+4. 避免重复与无关内容：删除不必要的重复和冗余部分，确保每段内容都具有清晰的目的，并与论文的主题紧密相关。
 
 下文是论文的一部分，请你修改它：
 
@@ -14,13 +15,13 @@
 
 内容：
 
-视觉语言模型（Visual-Language Models, VLMs）通过将计算机视觉与自然语言处理相结合，旨在实现图像与文本的多模态理解。这些模型在图像描述生成、视觉问答（Visual Question Answering, VQA）和视觉定位（Visual Grounding, VG）等跨模态任务中展现了巨大的潜力。近年来，得益于Transformer架构在自然语言处理和计算机视觉领域的广泛应用，基于Transformer的视觉语言模型成为多模态任务的研究主流，并在相关领域取得了显著进展。
+视觉语言模型（Visual-Language Models, VLMs）结合了计算机视觉与自然语言处理技术，旨在实现图像与文本的多模态信息理解。它们在图像描述生成（Image Captioning, IC）、视觉问答（Visual Question Answering, VQA）和视觉定位（Visual Grounding, VG）等跨模态任务中展现了巨大的潜力。近年来，Transformer架构在自然语言处理和计算机视觉领域的广泛应用，为视觉语言模型的发展提供了强大支持。得益于Transformer的自注意力机制，模型能够同时处理图像与文本数据，为多模态信息理解提供了创新解决方案。因此，基于Transformer的视觉语言模型已逐渐成为多模态任务研究的主流，并在多个应用领域取得了显著进展。
 
-在视觉语言模型的早期探索中，受BERT（Bidirectional Encoder Representations from Transformers）在自然语言处理领域的卓越表现启发，许多研究者尝试将其扩展到视觉任务中。模型如Visual-BERT和ViLBERT首次将Transformer架构应用于视觉语言任务，结合图像与文本信息，在掩码语言建模（Masked Language Modeling）和图像-文本匹配（Image-Text Matching）任务中取得了优异的成绩。通过Transformer的自注意力机制，这些模型能够有效学习词汇与视觉特征之间的关联，为后续研究奠定了坚实基础。
+视觉语言模型的早期发展受到BERT（Bidirectional Encoder Representations from Transformers）在自然语言处理领域成功的启发。随着BERT及其变种模型的广泛应用，许多研究者开始将其架构扩展到图像与文本结合的跨模态任务中。Visual-BERT和ViLBERT是这一探索的代表性模型，它们首次将Transformer架构应用于视觉语言任务，尤其在掩码语言建模（Masked Language Modeling）和图像-文本匹配（Image-Text Matching）任务中取得了显著成果。这些模型通过Transformer的自注意力机制，成功捕捉图像与文本之间的相互关系，促进了模型对多模态信息的理解。这些开创性工作为后续研究提供了宝贵的经验，并为进一步的发展奠定了坚实的基础。
 
-随着视觉语言模型需求的不断增加，早期的研究逐渐发展出四种主流架构类型。第一类是对比学习模型，利用正负样本对比，通过将相似的图像-文本对映射到相近的嵌入空间，提升跨模态对齐效果。第二类是掩码模型，通过部分遮掩输入信息，促使模型在恢复缺失内容的过程中进行推测和重建。第三类是基于预训练骨干的模型，通常借助大型预训练语言模型（如Llama）作为基础，通过图像编码器与语言模型的对齐，实现更精准的图像文本匹配。第四类是生成式模型，这些模型能够直接生成图像或文本内容，满足多样化任务需求。这四种主流架构为视觉语言模型的发展提供了多种实现方式，从高效对齐到多样化生成，为多模态任务奠定了坚实的技术基础。
+随着视觉语言模型应用需求的不断增长，研究者提出了四种主流架构类型。第一类是对比学习模型，这类模型通过对正负样本的对比，推动图像-文本对的嵌入空间对齐，从而显著提高跨模态对齐效果。第二类是掩码模型，这类模型通过部分遮掩输入的图像或文本信息，迫使模型在恢复缺失内容时进行推测和重建，提升了推理能力。第三类是基于预训练骨干的模型，这类模型通常采用大型预训练语言模型（如Llama等）作为骨干，结合图像编码器与语言模型对齐，显著提高图像-文本匹配的准确度，并在多个任务中展现出优异性能。第四类是生成式模型，这些模型不仅能直接生成图像或文本，广泛应用于图像描述和生成等任务，还能为创新应用提供解决方案，如图像生成与编辑。
 
-值得注意的是，这些视觉语言模型架构并非孤立存在，许多模型在设计时结合了对比学习、掩码训练和生成策略。接下来，我们将在每种架构中介绍一两个代表性模型，展示其设计思路。
+这四种主流架构为视觉语言模型的发展提供了多种可行的技术路径，从高效的跨模态对齐到创新的图像生成，极大地推动了视觉语言模型的应用与技术进步。值得注意的是，这些架构并非孤立存在，许多模型在设计时巧妙地融合了对比学习、掩码训练与生成策略的优点。接下来，我们将深入探讨每种架构中的一到两个代表性模型，并详细分析其设计思路与应用场景。
 
 参考文献：
 
@@ -42,13 +43,13 @@ Llama: Open and efficient foundation language models
 
 内容：
 
-基于对比学习的视觉语言模型旨在学习图像与文本之间的对齐表示，核心思想是利用对比损失函数优化模型参数，从而实现跨模态的语义关联。在这种方法中，正样本对由一张图像及其对应的真实文本描述组成，负样本对则是将同一张图像与描述其他图像的文本配对。通过区分正样本对与负样本对，这些视觉语言模型能够将语义相关的图像和文本映射到嵌入空间中的相近位置，而不相关的则被推向较远的位置。
+基于对比学习的视觉语言模型旨在学习图像与文本之间的对齐表示，其核心思想是通过对比损失函数优化模型参数，促使图像和文本在嵌入空间中实现跨模态的语义关联。具体而言，这类模型将正样本对（由图像及其对应的真实文本描述组成）与负样本对（将同一张图像与描述其他图像的文本配对）进行对比学习。通过区分正负样本对，这些视觉语言模型能够将语义相关的图像和文本映射到嵌入空间中的相近位置，而不相关的样本则被推向较远的位置。这种方法有助于提高跨模态对齐的精度，使模型能够更好地理解图像与文本之间的关系。
 
-CLIP（Contrastive Language-Image Pre-Training）是这一领域的代表性模型。CLIP通过对比学习框架训练视觉和文本编码器，使得图像和其对应的文本描述在嵌入空间中具有相似的向量表示。CLIP的训练数据集包含从网络上收集的四亿图像和文本对。依靠这些数据，CLIP能够学习到丰富的视觉和语言特征，并在零样本分类等任务中展现出非常卓越的性能。具体来说，基于ResNet-101的CLIP模型在零样本分类准确率上达到了76.2%，并在多个鲁棒性基准测试中超过了经过监督训练的ResNet模型。
+CLIP（Contrastive Language-Image Pre-Training）是这一领域的代表性模型。CLIP利用对比学习框架训练视觉和文本编码器，使图像和其对应的文本描述在嵌入空间中具有相似的向量表示。CLIP的训练数据集包含了四亿对来自网络的图像和文本。这些大规模的数据使得CLIP能够学习到丰富的视觉和语言特征，并在多个任务中展现出强大的性能，尤其是在零样本分类任务中表现卓越。以基于ResNet-101的CLIP模型为例，它在零样本分类准确率上达到了76.2%，并且在多个鲁棒性基准测试中，CLIP模型超越了经过监督训练的ResNet模型。
 
-SigLIP（Signature Language Image Pre-training）是一种基于CLIP改进的对比学习方法，主要区别在于损失函数的选择。与CLIP使用信息噪声对比估计（Information Noise Contrastive Estimation，InfoNCE）损失函数不同，SigLIP采用了基于二元交叉熵的噪声对比估计（Noise Contrastive Estimation，NCE）损失函数。这一损失函数的调整使得SigLIP在较小批量数据的情况下仍能展现出优异的零样本性能，从而减少了对大规模数据的依赖。
+SigLIP（Signature Language Image Pre-training）是一种基于CLIP的改进模型，其主要创新体现在损失函数的设计上。与CLIP使用的信息噪声对比估计（Information Noise Contrastive Estimation，InfoNCE）损失函数不同，SigLIP采用了基于二元交叉熵的噪声对比估计（Noise Contrastive Estimation，NCE）损失函数。通过这一调整，SigLIP能够在较小批量数据下仍然展现出优异的零样本性能，从而减少了对大规模数据的依赖。
 
-Llip（Latent Language Image Pretraining）模型进一步改进了图像与文本之间的关联方式。考虑到一张图像可以用多种不同的方式进行描述，Llip提出了一种新的条件编码机制，通过交叉注意力模块来根据目标描述调整图像的编码。这种方法不仅提高了编码的多样性，还增强了表示的表达能力，从而在零样本分类和检索任务中实现了性能提升。Llip通过动态调整图像特征的表示，使得模型能够更好地捕捉图像与文本之间复杂的语义关系，进一步提升了跨模态学习的效果。
+Llip（Latent Language Image Pretraining）模型进一步改进了图像与文本之间的关联方式。考虑到一张图像可以用多种不同的方式进行描述，Llip提出了一种新的条件编码机制，通过交叉注意力模块来根据目标描述调整图像的编码。这种方法的核心在于通过动态调整图像编码，使得每个图像可以针对不同的描述生成不同的编码表示，从而提高了编码的多样性和表达能力。Llip通过这种条件编码机制，能够灵活地适应各种任务需求，并进一步推动了跨模态学习的进展。
 
 参考文献：
 
@@ -72,11 +73,11 @@ InfoNCE：Representation learning with contrastive predictive coding.
 
 内容：
 
-在大语言模型的早期研究中，BERT通过掩码语言建模（Masked Language Modeling, MLM）技术，预测句子中缺失的词元，从而显著提升了在多种自然语言处理任务中的表现。受到BERT文本掩码技术的启发，视觉语言模型领域也开始采用类似的掩码策略，尤其是在图像编码方面。例如，MAE和I-JEPA便是通过掩码图像建模（Masked Image Modeling, MIM）技术来训练图像编码器。这些基于掩码的视觉语言模型的核心思想是，通过随机去除图像输入的部分区域，迫使模型在缺失信息的情况下进行推理，从而提升其跨模态信息的理解能力。
+在大语言模型的早期研究中，BERT通过掩码语言建模（Masked Language Modeling, MLM）技术，预测句子中缺失的词元，从而显著提升了在多种自然语言处理任务中的表现。受到BERT文本掩码技术的启发，视觉语言模型领域也开始采用类似的掩码策略，特别是在图像编码方面。例如，MAE（Masked Autoencoders）和I-JEPA（Image-Joint Encoding and Pretraining Architecture）便是通过掩码图像建模（Masked Image Modeling, MIM）技术来训练图像编码器。这些基于掩码的视觉语言模型的核心思想是，通过随机去除图像输入的部分区域，迫使模型在缺失信息的情况下进行推理，从而提升其跨模态信息的理解能力。
 
-FLAVA（Foundational Language and Vision Alignment）是基于掩码方法的典型模型。其架构包括三个核心组件，均基于Transformer框架并针对不同模态进行优化。图像编码器使用ViT（Vision Transformer）将图像转换为图像块，通过线性嵌入和Transformer表示进行处理，并附带一个分类标记（[CLSI]）。文本编码器则使用Transformer对文本进行标记化，并将其嵌入为向量进行上下文处理，输出隐藏状态向量，并附带一个分类标记（[CLST]）。这两个编码器都采用掩码训练方法。多模态编码器融合图像和文本编码器的隐藏状态，利用线性投影和跨模态注意力机制整合视觉与文本信息，并引入额外的多模态分类标记（[CLSM]）。FLAVA模型通过结合多模态和单模态的掩码建模损失，并辅以对比学习目标，展示了卓越的多功能性和有效性。在7000万对公开图像和文本的数据集上进行预训练后，FLAVA在35个涵盖视觉、语言和多模态基准的任务中取得了最先进的性能，展现了其强大的跨领域信息理解与整合能力。
+FLAVA（Foundational Language and Vision Alignment）是基于掩码方法的典型模型。该模型架构包括三个核心组件，均基于Transformer框架，并针对不同模态进行了优化。具体而言，图像编码器采用ViT（Vision Transformer）将图像分割为图像块，并通过线性嵌入和Transformer表示进行处理，处理过程中还会附带一个分类标记（[CLSI]）。文本编码器则使用Transformer对文本进行标记化，将文本嵌入为向量并进行上下文处理，输出隐藏状态向量，并附带一个分类标记（[CLST]）。这两个编码器都采用了掩码训练方法。多模态编码器则融合了图像和文本编码器的隐藏状态，借助线性投影和跨模态注意力机制有效整合视觉与文本信息，并引入额外的多模态分类标记（[CLSM]）。FLAVA模型通过结合多模态和单模态的掩码建模损失，并辅以对比学习目标，展现了卓越的多功能性和有效性。在7000万对公开图像和文本数据上进行预训练后，FLAVA在35个涵盖视觉、语言和多模态的基准任务中取得了最先进的性能，展示了其强大的跨领域信息理解与整合能力。
 
-FLAVA模型的局限性在于它依赖于预训练的视觉编码器，例如dVAE。为了解决这一问题，Kwon等人提出了MaskVLM。与FLAVA不同，MaskVLM不依赖于预训练的视觉编码器，而是直接在像素空间和文本标记空间上应用掩码策略。MaskVLM利用信息流动的方式，使得一个模态中的信息能够有效地传递到另一个模态，从而使模型能够在两个模态之间进行有效的联合学习。举例来说，在文本重构任务中，模型会利用来自图像编码器的信息来重构文本内容；而在图像任务中，模型也可以利用来自文本编码器的信息来辅助图像的处理和理解。这种互通的信息流动机制是MaskVLM能够跨越视觉和语言两种模态，减少对第三方模型依赖的关键因素。
+尽管FLAVA模型在多模态任务中表现出色，但其局限性在于依赖于预训练的视觉编码器（例如dVAE）。为了解决这一问题，Kwon等人提出了MaskVLM（Masked Vision-Language Model）。与FLAVA不同，MaskVLM不依赖于预训练的视觉编码器，而是直接在像素空间和文本标记空间上应用掩码策略。这一创新使得MaskVLM能够在没有外部视觉编码器的帮助下，直接处理图像和文本输入。MaskVLM通过信息流动机制，允许一个模态中的信息有效传递到另一个模态，从而使得模型能够在视觉和语言两个模态之间进行有效的联合学习。例如，在文本重构任务中，MaskVLM利用图像编码器的信息来辅助重构文本内容；而在图像任务中，模型则可以利用文本编码器提供的信息来辅助图像的处理和理解。
 
 参考文献：
 
