--- a/毕设/文献综述大纲.md
+++ b/毕设/文献综述大纲.md
@@ -1,9 +1,8 @@
 请您充当论文编辑专家，站在论文评审的角度，对论文进行修改，使其更加流畅、优美，并提升可读性。具体要求如下：
 
-1. 引人入胜并突出要点：通过修改，使文章能够迅速吸引读者的注意力，并帮助读者快速抓住文章的核心要点、分析和论点。确保文章内容简洁明了，重点突出，让读者在阅读过程中能够清楚理解文章的核心信息。
-2. 简洁的描述方法与结果：用简洁而清晰的语言对论文中的方法和结果进行详细描述，确保评审能够轻松理解论文的研究过程和结论。描述应避免含糊不清，尽量精确地表达技术细节和实验数据，帮助评审准确理解论文的贡献。
-3. 优化语言流畅性与逻辑结构：改善论文的语言流畅性，使文章的结构更为清晰、连贯。避免复杂冗长的句子和结构，使得每一部分内容都能自然地过渡到下一部分，提升论文的整体可读性。
-4. 避免重复与无关内容：删除不必要的重复和冗余部分，确保每段内容都具有清晰的目的，并与论文的主题紧密相关。
+1. 简洁的描述方法与结果：用简洁而清晰的语言对论文中的方法和结果进行详细描述，确保评审能够轻松理解论文的研究过程和结论。
+2. 优化语言流畅性与逻辑结构：改善论文的语言流畅性，使文章的结构更为清晰、连贯。避免复杂冗长的句子和结构，使得每一部分内容都能自然地过渡到下一部分，提升论文的整体可读性。
+3. 避免重复与无关内容：删除不必要的重复和冗余部分，确保每段内容都具有清晰的目的，并与论文的主题紧密相关。
 
 下文是论文的一部分，请你修改它：
 
@@ -147,23 +146,55 @@ Team C. Chameleon: Chameleon: Mixed-Modal Early-Fusion Foundation Models[EB/OL].
 
 大纲：
 
-介绍随着视觉语言模型的发展，对抗攻击的重点逐渐从早期的视觉模型发展至如今的视觉语言模型；介绍面向VLMs的对抗攻击的定义，从而介绍几种主流方法；介绍传统对抗样本的迁移性方向；介绍三种迁移性分类；
+介绍随着视觉语言模型的发展，对抗攻击的重点逐渐从早期的视觉模型发展至如今的视觉语言模型；
+
+介绍面向VLMs的对抗攻击的定义，然后介绍几种主流方法；
+
+介绍对抗样本具有迁移性的现象和原因；
+
+介绍VLMs三种迁移性分类；
 
 内容：
+
+随着视觉语言模型的快速发展，对抗攻击的研究已经从单一的视觉模型扩展到了更为复杂的多模态模型。早期的研究主要集中于通过微小的输入扰动误导模型的视觉识别能力。然而，随着视觉语言模型在多模态理解和推理任务中表现出色，攻击者开始探索操纵图像和文本输入的新方法，并且设计出多样化的攻击效果。这些多模态攻击策略不仅增加了攻击的多样性，也提高了对模型鲁棒性的要求，推动了新的防御机制的发展。 
+
+对抗攻击的定义是通过在输入的图像和文本中施加精心设计的扰动，使得模型生成攻击者指定的文本，例如错误的图像描述。这些攻击利用模型在处理多模态数据时的脆弱性，通过引入微小的、通常不易被人类察觉的扰动，诱导模型执行非预期的行为。因此，研究者需要关注这些攻击策略，并开发有效的防御措施，以确保视觉语言模型的安全性和可靠性。
+
+在这一背景下，一系列针对视觉语言模型的对抗攻击研究应运而生。这些研究揭示了多模态系统的潜在安全风险，并为构建更加健壮的模型提供了重要见解。例如，Carlini等人采用了与早期原理相同的对抗样本生成技术，通过对抗图像扰动最大化模型输出有害文本的概率，指出大语言模型和多模态模型在面对对抗攻击时可能违反设计原则生成有害文本。Qi等人专注于视觉语言模型的越狱攻击，通过计算图像对抗扰动，使攻击能够绕过模型的安全防护，迫使模型执行原本会被拒绝的有害指令。Bagdasaryan的工作则强调了通过在图像的特定部分嵌入对抗扰动来操纵模型输出的可能性，这种方法能够在不显著改变图像整体语义内容的前提下，引导模型产生攻击者指定的文本。Schlarmann等人提出了非定向攻击，通过降低正确文本输出的概率来计算对抗扰动。然而，由于图像的正确描述可能有无穷多种，即使对抗扰动成功避免了一种正确描述，模型仍有可能生成另一种符合图像的正确描述，这在一定程度上削弱了攻击的效果。Bailey等人在攻击效果方面提出了“图像劫持”的概念，介绍了一种新的行为匹配算法来训练这些图像劫持，而且还展示了如何利用这种技术实施多种攻击，包括特定字符串攻击、泄露上下文攻击、越狱攻击和“幻觉”攻击。
+
+尽管对抗样本的存在引发了人们对机器学习系统稳健性和可靠性的担忧，但研究人员发现了一个更有趣的现象：对抗样本的可转移性。可转移性指的是在一个模型上生成的对抗样本能够成功误导其他不同架构的模型。有了这种特性，就可以在不接触目标模型的模型架构和参数的情况下成功实施攻击，这为对抗攻击的研究和防御提供了新的视角。
 
 
 
 参考文献：
 
-On the adversarial robustness of multi-modal foundation models.
+Intriguing properties of neural networks
 
-On evaluating adversarial robustness of large vision-language models.
+Explaining and harnessing adversarial examples.
+
+（VLMs主流的几种对抗攻击方法）
 
 Are aligned neural networks adversarially aligned?
 
 Visual adversarial examples jailbreak large language models.
 
+Abusing Images and Sounds for Indirect Instruction Injection in Multi-Modal LLMs.
+
+On the adversarial robustness of multi-modal foundation models.
+
 Image hijacking: Adversarial images can control generative models at runtime.
+
+（介绍对抗样本具有迁移性的现象）
+
+Delving into transferable adversarial examples and black-box attacks.
+
+Transferability in machine learning: from phenomena to black-box attacks using adversarial samples.
+
+A Survey on Transferability of Adversarial Examples Across Deep Neural Networks.
+
+Reliable evaluation of adversarial transferability.
+
+（介绍对抗样本具有迁移性的原因）
 
 ## 2.1 跨模型迁移性增强方法
 
@@ -175,7 +206,15 @@ Image hijacking: Adversarial images can control generative models at runtime.
 
 参考文献：
 
+（传统的跨模型迁移性增强）
 
+
+
+（VLMs的跨模型迁移性增强-主流）
+
+
+
+（VLMs的跨模型迁移性增强-非主流）
 
 Set-level guidance attack: Boosting adversarial transferability of vision language pre-training models.
 
@@ -195,6 +234,12 @@ Improving Adversarial Transferability via Model Alignment.
 
 参考文献：
 
+（传统模型的跨任务迁移性）
+
+
+
+（VLMs的跨提示迁移性）
+
 
 
 ## 2.3 跨数据迁移性增强方法
@@ -205,31 +250,29 @@ Improving Adversarial Transferability via Model Alignment.
 
 内容：
 
+
+
 参考文献：
 
+（传统的跨数据迁移性）
 
 
 
+综述：
+
+
+
+An Introduction to Vision-Language Modeling
+
+Adversarial Attacks of Vision Tasks in the Past 10 Years: A Survey
 
 
 
 Towards adversarial attack on vision language pre-training models
 
-
-
 Boosting Transferability in Vision-Language Attacks via Diversification along the Intersection Region of Adversarial Trajectory.
 
 Transferable Diffusion-based Unrestricted Adversarial Attack on Pre-trained Vision-Language Models.
-
-
-
-Stop Reasoning! When Multimodal LLM with Chain-of-Thought Reasoning Meets Adversarial Image.
-
-
-
-
-
-
 
 
 
