--- a/毕设/文献综述大纲.md
+++ b/毕设/文献综述大纲.md
@@ -70,31 +70,29 @@ Assran M., Duval Q., Misra I., et al. Self-Supervised Learning from Images with 
 
 Singh A., Hu R., Goswami V., et al. Flava: A Foundational Language and Vision Alignment Model[C]. IEEE/CVF Conference on Computer Vision and Pattern Recognition. 2022: 15617-15629.
 
-**Dosvitskiy A., Beyer L., Kolesnikov A., et al. An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale[C]. International Conference on Learning Representations. 2021: ??????-???????.**
+Dosvitskiy A., Beyer L., Kolesnikov A., et al. An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale[EB/OL]. arXiv preprint arXiv:2010.11929, 2020.
 
 Zhang M., Jiang S., Cui Z., et al. D-VAE: A Variational Autoencoder for Directed Acyclic Graphs[C]. Conference on Neural Information Processing Systems. 2019: 1586-1598.
 
-**Kwon G., Cai Z., Ravichandran A., et al. Masked Vision and Language Modeling for Multi-modal Representation Learning[C]. International Conference on Learning Representations. 2023: ??????-???????.**
+Kwon G., Cai Z., Ravichandran A., et al. Masked Vision and Language Modeling for Multi-modal Representation Learning[EB/OL]. arXiv preprint arXiv:2208.02131, 2022.
 
 ## 1.3 基于大语言模型的VLMs
 
-基于大语言模型的视觉语言模型利用已训练的大型语言模型或视觉特征提取器，学习文本与图像之间的映射关系。这一方法的主要优势在于能够充分发挥预训练模型所积累的丰富特征，从而显著减少从零开始训练所需的大量计算资源和数据。其核心理念是通过有效结合视觉编码器与大型语言模型，避免了完全重新训练，以实现对多模态数据的深刻理解。
+基于大语言模型的视觉语言模型利用已训练的大型语言模型或视觉特征提取器，学习文本与图像之间的映射关系。该方法的主要优势在于能够充分发挥预训练模型的丰富特征，从而显著减少从零开始训练所需的计算资源和数据量。其核心理念是通过有效结合视觉编码器与大型语言模型，避免了重新训练，从而实现对多模态数据的深刻理解。
 
-Frozen是首批将大型语言模型应用于视觉语言任务的开创性模型之一。它通过一个轻量级映射网络，将视觉编码器连接至冻结状态下的大语言模型。该映射网络负责将视觉特征投影到文本标记嵌入空间。在Frozen中，使用NF-ResNet-50作为视觉编码器，并连接线性映射层，二者均为从头开始进行训练，而大语言模型（例如，在C4数据集上经过培训、参数达7亿的Transformer）则保持冻结，以保留其预先学习到的重要特征。在推理阶段，Frozen能够条件化地生成文本，这展示了其快速适应新任务、获取通用知识以及融合视觉与语言元素的能力。
+Frozen是首批将大型语言模型应用于视觉语言任务的开创性模型之一。该模型通过一个轻量级映射网络，将视觉编码器连接至冻结状态的大语言模型。映射网络负责将视觉特征投影到文本标记嵌入空间。Frozen使用NF-ResNet-50作为视觉编码器，并与一个线性映射层连接，二者从头开始训练，而大语言模型（例如，在C4数据集上训练的、参数为7亿的Transformer）保持冻结状态，以保留其预先学习到的重要特征。在推理阶段，Frozen能够条件化生成文本，展示了其快速适应新任务、获取通用知识以及融合视觉与语言元素的能力。Frozen主要用于文本生成任务，如图像描述生成。在推理过程中，该模型接受图像和文本嵌入的输入，并生成与图像内容相关的文本描述。尽管Frozen的性能相对中等，但它为后续的开放式多模态零样本/少样本学习发展奠定了基础。
 
-Frozen模型通常以文本生成任务为目标，例如图像描述生成。在推理过程中，该模型可以接受来自图像和文本嵌入的信息，并生成与图像内容相关联的描述。尽管Frozen在性能上相对适中，但它为后续开放式多模态零样本/少样本学习的发展奠定了重要基础。
+MiniGPT系列进一步扩展了这一概念，使得同时接收文本和图像输入并生成相应文本输出成为可能。其中，MiniGPT-4通过简单的线性投影层，将BLIP-2所用的图像编码器产生的图像嵌入与Vicuna语言模型的输入空间有效对接。由于这两个组件均为预训练，MiniGPT-4仅需针对线性投影层进行训练，训练过程分为两个阶段：第一阶段使用来自Conceptual Caption、SBU和LAION等数据集的五百万对数据；第二阶段进行400步的指令微调。通过这一过程，MiniGPT-4能够在短时间内，以有限的计算资源完成高效训练。MiniGPT-5则在此基础上增加了图像生成功能，使用生成标记创建新图像，这些标记被映射到特征向量并输入到冻结的图像生成模块中，进一步提升了多模态处理能力。
 
-MiniGPT系列进一步扩展了这一概念，使得同时接收文本和图像输入并产生相应文本输出成为可能。其中，MiniGPT-4通过简单线性投影层，将使用BLIP-2同样可视化编码器获得的图像嵌入，与Vicuna语言模型输入空间进行了有效对齐。由于这两个组件均经过预训练，因此MiniGPT-4仅需针对这个线性投影层进行培训，此过程分为两个阶段：第一阶段涉及五百万对来自Conceptual Caption、SBU及LAION等数据集的数据；第二阶段则包括400步指令微调。这一过程使得在较短时间内，仅凭有限计算资源即可完成高效培训。而MiniGPT-5在此基础上增加了图像生成功能，通过引入生成标记来创建新颖图像，这些标记被映射至特征向量并输入到冻结状态下的图像生成模块中，实现更强大的多模态处理能力。
+继MiniGPT系列创新后，Bai等人推出的Qwen系列模型，包括Qwen-VL和Qwen-VL-Chat，在多模态交互领域取得了显著进展。Qwen模型结合了大型语言模型和视觉编码器，增强了对视觉和语言信息的处理能力。在Qwen架构中，LLM以Qwen-7B为基础初始化，视觉编码器采用ViT-bigG。模型通过单层交叉注意力模块将视觉表示压缩成固定长度的序列，这些序列被输入到LLM中。这一设计提升了模型处理视觉和语言信息的效率，促进了多模态任务中更有效的信息交互，为多模态技术的发展提供了新的动力。
 
-继MiniGPT系列的创新之后，Bai等人推出的Qwen系列模型，包括Qwen-VL和Qwen-VL-Chat，在多模态交互领域取得了显著进展。这些模型结合了大型语言模型和视觉编码器，以增强对视觉和语言信息的处理能力。在Qwen模型架构中，LLM基于Qwen-7B进行初始化，而视觉编码器则采用ViT-bigG。模型通过单层交叉注意力模块将视觉表示压缩成固定长度的序列，这些序列随后被输入到LLM中。这一设计不仅提升了模型在处理视觉和语言信息时的效率，而且促进了多模态任务中更有效的信息交互，为多模态交互技术的发展提供了新的动力。
-
-在多模态交互领域，Li等人提出的BLIP-2模型实现了预训练模型的高效利用，为图像到文本的转换提供了创新方案。BLIP-2通过预训练的冻结模型大幅缩短训练时间，利用视觉编码器如CLIP生成图像嵌入，并将其映射到大型语言模型如OPT的输入空间。模型的关键组件是Q-Former，一个约含100-200M参数的Transformer，它通过交叉注意力机制将随机初始化的“查询”向量与图像嵌入交互，并通过线性层投影到LLM输入空间。这种方法不仅提高了训练效率，还在多模态任务中实现了更精细的特征对齐，显著提升了图像理解和文本生成的紧密联系。
+在多模态交互领域，Li等人提出的BLIP-2模型高效利用预训练模型，为图像到文本的转换提供了创新方案。BLIP-2通过冻结的预训练模型大幅缩短训练时间，使用如CLIP的视觉编码器生成图像嵌入，并将其映射到大型语言模型（如OPT）的输入空间。BLIP-2的关键组件是Q-Former，一个约含100-200M参数的Transformer，通过交叉注意力机制将随机初始化的“查询”向量与图像嵌入交互，并通过线性层将其投影到LLM输入空间。这种方法提高了训练效率，并在多模态任务中实现了更精细的特征对齐，显著提升了图像理解与文本生成的紧密联系。
 
 参考文献：
 
 Tsimpoukeelli M., Menick J., Cabi S., et al. Multimodal Few-Shot Learning with Frozen Language Models[C]. Conference on Neural Information Processing Systems. 2021: 200-212.
 
-**Zhu D., Chen J., Shen X., et al. MiniGPT-4: Enhancing Vision-Language Understanding with Advanced Large Language Models[C]. International Conference on Learning Representations. 2024: ??????-???????.**
+Zhu D., Chen J., Shen X., et al. MiniGPT-4: Enhancing Vision-Language Understanding with Advanced Large Language Models[EB/OL]. arXiv preprint arXiv:2304.10592, 2023.
 
 Brock A., De S., Smith S. L., et al. High-Performance Large-Scale Image Recognition Without Normalization[C]. International Conference on Machine Learning. 2021: 1059-1071.
 
@@ -120,13 +118,13 @@ Bai J., Bai S., Chu Y., et al. Qwen Technical Report[EB/OL]. arXiv preprint arXi
 
 ## 1.4 生成式VLMs
 
-生成式视觉语言模型是一类利用生成模型来处理和理解视觉和语言信息的模型。这些模型通常能够生成图像或文本，或者在给定一种模态的条件下生成另一种模态的内容。生成式模型的核心在于它们能够学习输入数据的分布，并根据这个分布生成新的数据实例。在视觉语言模型的上下文中，这意味着模型能够基于文本描述生成图像，或者基于图像生成描述性文本。
+生成式视觉语言模型是一类利用生成模型处理和理解视觉与语言信息的模型。这些模型能够生成图像或文本，或在给定一种模态的条件下生成另一种模态的内容。生成式模型的核心在于学习输入数据的分布，并基于该分布生成新的数据实例。在视觉语言模型的背景下，这意味着模型能够根据文本描述生成图像，或根据图像生成文本描述。
 
-CoCa（Contrastive Captioner）是一种生成式文本生成器，它通过对比学习和生成损失来训练一个多模态文本解码器。CoCa接受图像编码器的输出和单模态文本解码器产生的文本嵌入作为输入，从而生成与图像内容相关的文本。CoCa在预训练阶段使用了大规模的图像和文本数据集，通过将标注的图像标签视为文本，从而学习图像和文本之间的关联。这使得它不仅能够进行图像描述生成，还能够执行其他多模态理解任务，如视觉问答任务，而无需进一步的适应性调整。
+CoCa（Contrastive Captioner）是一种生成式文本生成器，结合了对比学习和生成损失来训练多模态文本解码器。CoCa接受图像编码器的输出和来自单模态文本解码器的文本嵌入，生成与图像内容相关的文本。CoCa在预训练阶段利用大规模的图像和文本数据集，通过将图像标签视为文本，学习图像和文本之间的关联。这使得CoCa不仅能生成图像描述，还能执行其他多模态理解任务，如视觉问答任务，而无需额外的适应性调整。
 
-CM3leon是一个多模态生成模型，它专门用于文本到图像和图像到文本的生成任务。CM3leon借鉴了图像标记器和文本标记器的设计，将图像和文本编码为一系列的标记，然后通过一个Transformer模型来处理这些标记。CM3leon的训练分为两个阶段：第一阶段是检索增强的预训练，使用基于CLIP的编码器作为检索器来获取相关的多模态文档，并将这些文档添加到输入序列中；第二阶段是监督式微调（Supervised Fine-Tuning, SFT），在这个阶段，模型通过多任务指令调整来处理和生成不同模态的内容。这种两阶段训练方法使得CM3leon在多模态任务中表现出色，展示了自回归模型在处理文本和图像之间复杂交互方面的能力。
+CM3leon是一个多模态生成模型，专注于文本到图像和图像到文本的生成任务。CM3leon借鉴了图像标记器和文本标记器的设计，将图像和文本编码为一系列标记，然后通过Transformer模型处理这些标记。CM3leon的训练分为两个阶段：首先是检索增强的预训练，使用基于CLIP的编码器作为检索器获取相关的多模态文档，并将其加入输入序列中；接着是监督式微调（Supervised Fine-Tuning, SFT），通过多任务指令调整模型，以处理并生成不同模态的内容。这一两阶段的训练方法使得CM3leon在多模态任务中表现优异，展示了自回归模型在处理文本和图像间复杂交互的能力。
 
-Chameleon是一系列混合模态基础模型，它们能够生成和推理混合了文本和图像内容的序列。Chameleon模型从一开始就设计为混合模态，使用统一的架构从头开始训练，处理所有模态——图像、文本和代码的混合。这种集成方法采用完全基于标记的表示，将图像和文本都转换为离散标记，使得相同的Transformer架构可以应用于图像和文本标记的序列，而无需为每种模态单独编码器。这种早期融合策略使得模型能够在不同模态之间无缝推理和生成，但也带来了优化稳定性和扩展性的技术挑战。
+Chameleon是一系列混合模态基础模型，能够生成并推理包含文本和图像内容的序列。Chameleon模型从一开始就设计为混合模态，使用统一架构处理所有模态——图像、文本和代码。这种集成方法采用基于标记的表示，将图像和文本转换为离散标记，使得相同的Transformer架构可以应用于图像和文本标记序列，而无需为每种模态单独设计编码器。早期的融合策略使得模型能够在不同模态之间无缝推理和生成，但也带来了优化稳定性和扩展性的技术挑战。
 
 参考文献：
 
@@ -144,109 +142,147 @@ Team C. Chameleon: Chameleon: Mixed-Modal Early-Fusion Foundation Models[EB/OL].
 
 # 2 面向VLMs的对抗攻击方法
 
-大纲：
-
-介绍随着视觉语言模型的发展，对抗攻击的重点逐渐从早期的视觉模型发展至如今的视觉语言模型；
-
-介绍面向VLMs的对抗攻击的定义，然后介绍几种主流方法；
-
-介绍对抗样本具有迁移性的现象和原因；
-
-介绍VLMs三种迁移性分类；
-
-内容：
-
 随着视觉语言模型的快速发展，对抗攻击的研究已经从单一的视觉模型扩展到了更为复杂的多模态模型。早期的研究主要集中于通过微小的输入扰动误导模型的视觉识别能力。然而，随着视觉语言模型在多模态理解和推理任务中表现出色，攻击者开始探索操纵图像和文本输入的新方法，并且设计出多样化的攻击效果。这些多模态攻击策略不仅增加了攻击的多样性，也提高了对模型鲁棒性的要求，推动了新的防御机制的发展。 
 
 对抗攻击的定义是通过在输入的图像和文本中施加精心设计的扰动，使得模型生成攻击者指定的文本，例如错误的图像描述。这些攻击利用模型在处理多模态数据时的脆弱性，通过引入微小的、通常不易被人类察觉的扰动，诱导模型执行非预期的行为。因此，研究者需要关注这些攻击策略，并开发有效的防御措施，以确保视觉语言模型的安全性和可靠性。
 
-在这一背景下，一系列针对视觉语言模型的对抗攻击研究应运而生。这些研究揭示了多模态系统的潜在安全风险，并为构建更加健壮的模型提供了重要见解。例如，Carlini等人采用了与早期原理相同的对抗样本生成技术，通过对抗图像扰动最大化模型输出有害文本的概率，指出大语言模型和多模态模型在面对对抗攻击时可能违反设计原则生成有害文本。Qi等人专注于视觉语言模型的越狱攻击，通过计算图像对抗扰动，使攻击能够绕过模型的安全防护，迫使模型执行原本会被拒绝的有害指令。Bagdasaryan的工作则强调了通过在图像的特定部分嵌入对抗扰动来操纵模型输出的可能性，这种方法能够在不显著改变图像整体语义内容的前提下，引导模型产生攻击者指定的文本。Schlarmann等人提出了非定向攻击，通过降低正确文本输出的概率来计算对抗扰动。然而，由于图像的正确描述可能有无穷多种，即使对抗扰动成功避免了一种正确描述，模型仍有可能生成另一种符合图像的正确描述，这在一定程度上削弱了攻击的效果。Bailey等人在攻击效果方面提出了“图像劫持”的概念，介绍了一种新的行为匹配算法来训练这些图像劫持，而且还展示了如何利用这种技术实施多种攻击，包括特定字符串攻击、泄露上下文攻击、越狱攻击和“幻觉”攻击。
+在这一背景下，一系列针对视觉语言模型的对抗攻击研究应运而生。这些研究不仅揭示了多模态系统的潜在安全风险，还为构建更健壮的模型提供了宝贵的见解。例如，Carlini等人延续早期对抗样本生成的技术，通过最大化对抗图像扰动对模型输出有害文本的概率，指出大型语言模型和多模态模型在面对对抗攻击时可能违背设计原则，进而生成有害文本。Qi等人则关注视觉语言模型的越狱攻击，通过计算图像对抗扰动，绕过模型的安全防护，迫使模型执行本应被拒绝的有害指令。Bagdasaryan的研究强调了在图像特定区域嵌入对抗扰动的可能性，这种方法能在不显著改变图像语义内容的情况下，引导模型生成攻击者指定的文本。Schlarmann等人提出了非定向攻击，通过降低正确文本输出的概率来计算对抗扰动。然而，由于图像的正确描述可能有无穷多种，尽管对抗扰动能够避免某一正确描述，模型仍可能生成其他符合图像的正确描述，这在一定程度上削弱了攻击效果。Bailey等人则提出了“图像劫持”的概念，介绍了一种新的行为匹配算法，用于训练图像劫持，并展示了如何利用这一技术实施多种攻击，包括特定字符串攻击、上下文泄露攻击、越狱攻击和“幻觉”攻击。
 
-尽管对抗样本的存在引发了人们对机器学习系统稳健性和可靠性的担忧，但研究人员发现了一个更有趣的现象：对抗样本的可转移性。可转移性指的是在一个模型上生成的对抗样本能够成功误导其他不同架构的模型。有了这种特性，就可以在不接触目标模型的模型架构和参数的情况下成功实施攻击，这为对抗攻击的研究和防御提供了新的视角。
-
-
+对抗样本的存在引起了人们对机器学习系统稳健性和可靠性的广泛关注。尤其引人注目的是其迁移性，即一个模型上生成的对抗样本能够误导结构不同的其他模型。这一特性大大降低了攻击者的攻击难度，因为他们无需了解目标模型的具体架构和参数。更令人关注的是，学者们发现，对抗扰动即使被应用到不同的图像上，依然能够成功误导模型，表明对抗扰动具有一定的通用性，能够跨越图像内容发挥作用。这种跨图像迁移性进一步扩大了对抗样本的影响范围及潜在威胁。此外，研究还发现，针对特定任务生成的图像对抗扰动，在其他任务中也能产生影响。这意味着，对抗样本不仅能够在同一任务的不同模型间迁移，还能跨任务挑战模型的泛化能力。本文将介绍关于视觉语言模型中对抗样本在跨模型、跨提示和跨数据迁移性方面的研究进展。
 
 参考文献：
 
-Intriguing properties of neural networks
+Szegedy C., Zaremba W., Sutskever I., et al. Intriguing Properties of Neural Networks[EB/OL]. arXiv preprint arXiv:1312.6199, 2013.
 
-Explaining and harnessing adversarial examples.
+Goodfellow I. J., Shlens J., Szegedy C.. Explaining and Harnessing Adversarial Examples[EB/OL]. arXiv preprint arXiv:1412.6572, 2014.
 
 （VLMs主流的几种对抗攻击方法）
 
-Are aligned neural networks adversarially aligned?
+Carlini N., Nasr M., Choquette-Choo C. A., et al. Are Aligned Neural Networks Adversarially Aligned?[C]. Conference on Neural Information Processing Systems. 2023: 61478-61500.
 
-Visual adversarial examples jailbreak large language models.
+Qi X., Huang K., Panda A., et al. Visual Adversarial Examples Jailbreak Aligned Large Language Models[C]. Conference on Innovative Applications of Artificial Intelligence. 2024: 21527-21536.
 
-Abusing Images and Sounds for Indirect Instruction Injection in Multi-Modal LLMs.
+Bagdasaryan E., Hsieh T. Y., Nassi B., et al. Abusing Images and Sounds for Indirect Instruction Injection in Multi-Modal LLMs[EB/OL]. arXiv preprint arXiv:2307.10490, 2023.
 
-On the adversarial robustness of multi-modal foundation models.
+Schilarmann C., Hein M. On the Adversarial Robustness of Multi-Modal Foundation Models[C]. IEEE/ CVF International Conference on Computer Vision. 2023: 3697-3687.
 
-Image hijacking: Adversarial images can control generative models at runtime.
+Bailey L., Ong E., Russell S., et al. Image Hijacks: Adversarial Images can Control Generative Models at Runtime[EB/OL]. arXiv preprint arXiv:2309.00236, 2023.
 
 （介绍对抗样本具有迁移性的现象）
 
-Delving into transferable adversarial examples and black-box attacks.
+Gu J., Jia X., Jorge P. A Survey on Transferability of Adversarial Examples Across Deep Neural Networks[EB/OL]. arXiv preprint arXiv:2310.17626, 2023.
 
-Transferability in machine learning: from phenomena to black-box attacks using adversarial samples.
+Yu W., Gu J., Li Z., et al. Reliable Evaluation of Adversarial Transferability[EB/OL]. arXiv preprint arXiv:2306.08565, 2023.
 
-A Survey on Transferability of Adversarial Examples Across Deep Neural Networks.
+（介绍对抗样本具有迁移性的类别）
 
-Reliable evaluation of adversarial transferability.
+Naseer M., Khan S. H., Rahman S., et al. Task-Generalizable Adversarial Attack Based on Perceptual Metric[EB/OL]. arXiv preprint arXiv:1811.09020, 2018.
 
-（介绍对抗样本具有迁移性的原因）
+Naseer M., Khan S. H., Khan H. M., et al. Cross-Domain Transferability of Adversarial Perturbations[C]. Conference on Neural Information Processing Systems. 2019: 12885-12895.
+
+Lu Y., Jia Y., Wang J., et al. Enhancing Cross-Task Black-Box Transferability of Adversarial Examples with Dispersion Reduction[C]. IEEE/CVF Conference on Computer Vision and Pattern Recognition. 2020: 937-946.
+
+Nakka K. K., Salzmann M. Learning Transferable Adversarial Perturbations[C]. Conference on Neural Information Processing Systems. 2021: 13950-13962.
 
 ## 2.1 跨模型迁移性增强方法
 
-大纲：
+对抗样本的跨模型迁移性是指同一个对抗样本能够成功地欺骗不同结构或训练数据不同的模型。对此现象的原因，学术界已有多种解释。Nguyen等人提出，不同模型在训练过程中可能会捕捉到相似的图像特征，这为对抗样本的迁移提供了可能性。Goodfellow等则从模型权重的角度分析，认为由于训练数据的相似性，不同模型的权重趋向于一致，从而促进了对抗样本的迁移。此外，Dong等学者强调，模型的决策边界是对抗样本生成的关键因素。
 
-介绍传统模型的跨模型迁移性增强的方法；介绍面向VLMs的跨模型迁移性增强的方法（主流+非主流）；
+虽然对抗样本的跨模型迁移性已经有了一些理论解释，但如何让对抗样本在不同模型间更加有效地“迁移”仍然是一个研究热点。为了增强这一效果，研究者们提出了多种方法，旨在提高对抗样本在不同模型上的适应性。接下来，我们将介绍一些具体的技术和策略，这些方法能够帮助对抗样本更好地跨模型传播。
 
-内容：
+针对早期的视觉模型，Xie等人首次提出通过对原始图像进行可微分变换以增强对抗样本的迁移性。在生成对抗扰动的每一步中，他们引入了随机图像变换操作，例如按一定概率对图像进行大小调整和填充。实验表明，随着变换概率的增加，对抗样本的跨模型迁移能力显著提高。除了数据增强的策略外，Dong等人进一步优化了对抗样本的生成方法，通过将动量机制引入快速梯度符号法（FGSM），提出了改进算法 MI-FGSM（Momentum Iterative Fast Gradient Method）。这一方法利用动量累计历史梯度信息，使对抗扰动的更新更加稳定，从而提升了跨模型的迁移效果。此外，Li 等人针对可迁移对抗样本的两个关键问题进行了研究：一是迭代攻击中梯度幅值逐渐减小，导致动量累积时连续两次扰动过于相似，即“噪声固化”问题；二是对抗样本需要同时逼近目标类别并远离真实类别的矛盾性。为此，他们首次引入庞加莱球作为度量空间，解决了噪声固化问题，使梯度幅值能够自适应调整，并提升了噪声方向的灵活性。同时，他们设计了一种基于庞加莱距离的损失函数，以替代传统交叉熵损失，仅在逼近目标类别时施加梯度更新，从而进一步增强对抗攻击的迁移效果。
+
+在视觉语言模型领域，对抗样本的跨模型迁移性同样备受关注。由于这类模型不仅处理视觉特征，还需结合语言信息，其复杂性使得增强跨模型迁移性的方法更具挑战性。针对这一问题，研究者们提出了一系列针对视觉语言模型的优化策略，试图通过融合多模态特征和改进生成机制，提升对抗样本在视觉语言模型间的迁移效果。在集成模型方向，Guo等人提出的 AdvDiffVLM 方法使用自适应集成梯度估计（Adaptive Ensemble Gradient Estimation）模块。该模块通过多个代理模型估计目标模型的梯度信息，从而在扩散模型生成对抗图像的过程中有效嵌入对抗语义。Niu等人设计了一种基于最大似然的算法，用于生成图像越狱提示以攻击视觉语言模型。他们采用了多个代理模型，包括基于 Vicuna-7B、Vicuna-13B 和 LLaMA-2-7B 的 MiniGPT-4。Wu等人则通过整合 ViT-B/32、ViT-B/16、ViT-L/14 和 ViT-L/14@336px 等模型，对多模态智能体进行幻觉攻击与目标误导攻击。Dong等人进一步提出一种方法，在生成图像扰动时以 ViT-B/16、CLIP 和 BLIP-2 作为代理模型，并结合 SSA-CWA 进行攻击，以提升对抗样本的迁移性。此外，部分研究将图像嵌入作为提升跨模型迁移性的切入点。例如，Dong等人提出一种图像嵌入攻击方法，旨在通过增加对抗图像与原始图像嵌入之间的差异来误导模型。针对可能导致模型输出其他正确描述的风险，Zhao等人提出结合扩散模型将目标文本转换为图像，并通过拉近对抗图像与生成图像嵌入的相似度来进行优化。在文本描述攻击方面，Zhao等人提出采用随机梯度无关（RGF, Random Gradient-Free）方法来估计梯度，成功攻击了未见过的视觉语言模型。
+
+从模型对齐的角度，Ma 等人提出了一种微调源模型（Source Model）的策略，使其输出与一组独立的见证模型（Witness Models）的输出接近，然后利用源模型生成对抗样本，从而提升跨模型迁移能力。Lu 等人提出了 SGA（Set-level Guidance Attack） 方法，通过结合跨模态交互和对齐保持的数据增强技术，生成可在黑盒环境中高效攻击多个模型的对抗样本。Han 等人则从最优传输（Optimal Transport, OT）理论出发，将图像和文本集合的特征视为两个分布，通过最优传输计算两者间的最优映射关系，有效缓解过拟合问题，并提升对抗样本的迁移性。
 
 参考文献：
 
+（介绍对抗样本具有迁移性的原因）
+
+Nguyen A. M., Yosinski J., Clune J. Deep Neural Networks are Easily Fooled: High Confidence Predictions for Unrecognizable Images[C]. IEEE Conference on Computer Vision and Pattern Recognition. 2015: 427-436.
+
+Goodfellow I. J., Shlens J., Szegedy C.. Explaining and Harnessing Adversarial Examples[EB/OL]. arXiv preprint arXiv:1412.6572, 2014.
+
+Dong Y., Liao F., Pang T., et al. Boosting Adversarial Attacks with Momentum[C]. IEEE Conference on Computer Vision and Pattern Recognition. 2018: 9185-9193.
+
 （传统的跨模型迁移性增强）
 
+-数据增强
 
+Xie C., Zhang Z., Zhou Y., et al. Improving Transferability of Adversarial Examples With Input Diversity[C]. Conference on Computer Vision and Pattern Recognition. 2019: 2730-2739.
 
-（VLMs的跨模型迁移性增强-主流）
+-优化方法
 
+Dong Y., Liao F., Pang T., et al. Boosting Adversarial Attacks with Momentum[C]. IEEE Conference on Computer Vision and Pattern Recognition. 2018: 9185-9193.
 
+-损失函数
 
-（VLMs的跨模型迁移性增强-非主流）
+Li M., Deng C., Li T., et al. Towards Transferable Targeted Attack[C]. IEEE/CVF Conference on Computer Vision and Pattern Recognition. 2020: 638-646.
 
-Set-level guidance attack: Boosting adversarial transferability of vision language pre-training models.
+（VLMs的跨模型迁移性增强）
 
-OT-Attack: Enhancing Adversarial Transferability of Vision-Language Models via Optimal Transport Optimization.
+Guo Q., Pang S., Jia X., et al. Efficiently Adversarial Examples Generation for Visual-Language Models under Targeted Transfer Scenarios using Diffusion Models[EB/OL]. arXiv preprint arXiv:2404.10335, 2024.
 
-Improving Adversarial Transferability via Model Alignment.
+Niu Z., Ren H., Gao X., et al. Jailbreaking Attack Against Multimodal Large Language Model[EB/OL]. arXiv preprint arXiv:2402.02309, 2024.
+
+Wu C. H., Koh J. Y., Salakhutdinov R., et al. Adversarial Attacks on Multimodal Agents[EB/OL]. arXiv preprint arXiv:2406.12814, 2024.
+
+Dong Y., Chen H., Chen J., et al. How Robust is Google's Bard to Adversarial Image Attacks?[EB/OL]. arXiv preprint arXiv:2309.11751, 2023.
+
+Zhao Y., Pang T., Du C., et al. On Evaluating Adversarial Robustness of Large Vision-Language Models[C]. Conference on Neural Information Processing Systems. 2023: 54111-54138.
+
+-其他
+
+Ma A., Farahmand A., Pan Y., et al. Improving Adversarial Transferability via Model Alignment[C]. European Conference on Computer Vision. 2024: 74-92.
+
+Lu D., Wang Z., Wang T., et al. Set-level Guidance Attack: Boosting Adversarial Transferability of Vision-Language Pre-training Models[C]. IEEE/CVF International Conference on Computer Vision. 2023: 102-111.
+
+Han D., Jia X., Bai Y., et al. OT-Attack: Enhancing Adversarial Transferability of Vision-Language Models via Optimal Transport Optimization[EB/OL]. arXiv preprint arXiv:2312.04403, 2023.
 
 ## 2.2 跨提示迁移性增强方法
 
 大纲：
 
-介绍跨任务迁移性和跨提示迁移性的区别；介绍传统模型的跨任务迁移性的研究；介绍方法；
+介绍跨提示迁移性的概念
+
+介绍跨任务迁移性和跨提示迁移性的区别；
+
+介绍传统模型的跨任务迁移性的研究；
+
+介绍方法；
 
 内容：
 
-
+视觉语言模型凭借其对文本提示的灵活适配能力，在无需架构调整的情况下即可完成多种视觉任务，例如图像分类、图像描述和视觉问答等。这种模型通过将视觉信息和文本提示进行联合建模，展现了强大的任务泛化能力。然而，并非所有任务都可以单纯依赖文本提示完成，例如视觉定位任务需要额外的架构设计和大量预训练支持。Minigpt-v2 和 Kosmos-2 等模型正是通过大规模预训练才具备了执行视觉定位的能力。因此，许多研究着重于对抗样本的跨提示迁移性进行研究。
 
 参考文献：
 
 （传统模型的跨任务迁移性）
 
+（视觉定位）
 
+Chen J., Zhu D., Shen X., et al. MiniGPT-v2: Large Language Model as A Unified Interface for Vision-Language Multi-Task Learning[EB/OL]. arXiv preprint arXiv:2310.09478, 2023.
+
+Peng Z., Wang W., Dong L., et al. Kosmos-2: Grounding Multimodal Large Language Models to the World[EB/OL]. arXiv preprint arXiv:2306.14824, 2023.
 
 （VLMs的跨提示迁移性）
 
+Bailey L., Ong E., Russell S., et al. Image Hijacks: Adversarial Images can Control Generative Models at Runtime[EB/OL]. arXiv preprint arXiv:2309.00236, 2023.
 
+Lu D., Pang T., Du C., et al. Test-Time Backdoor Attacks on Multimodal Large Language Models[EB/OL]. arXiv preprint arXiv:2402.08577, 2024.
+
+Luo H., Gu J., Liu F., et al. An Image Is Worth 1000 Lies: Transferability of Adversarial Images across Prompts on Vision-Language Models[C]. International Conference on Learning Representations. 2024: 1-22.
 
 ## 2.3 跨数据迁移性增强方法
 
 大纲：
 
-介绍传统任务的跨数据迁移性；介绍当前视觉语言模型的跨数据迁移性分为几类；介绍方法；
+介绍跨跨数据迁移性的定义；
+
+介绍当前视觉语言模型的跨数据迁移性分为几类；
+
+介绍方法；
 
 内容：
 
@@ -256,117 +292,29 @@ Improving Adversarial Transferability via Model Alignment.
 
 （传统的跨数据迁移性）
 
+视觉语言模型：
 
+图像
+
+Lu D., Pang T., Du C., et al. Test-Time Backdoor Attacks on Multimodal Large Language Models[EB/OL]. arXiv preprint arXiv:2402.08577, 2024.
+
+语料库
+
+Qi X., Huang K., Panda A., et al. Visual Adversarial Examples Jailbreak Aligned Large Language Models[C]. Conference on Innovative Applications of Artificial Intelligence. 2024: 21527-21536.
+
+Wang R., Ma X., Zhou H., et al. White-Box Multimodal Jailbreaks Against Large Vision-Language Models[C]. Conference on Multimedia. 2024: 6920-6928.
+
+Ying Z., Liu A., Zhang T., et al. Jailbreak Vision Language Models via Bi-Modal Adversarial Prompt[EB/OL]. arXiv preprint arXiv:2406.04031, 2024.
 
 综述：
 
+Bordes F., Pang R. Y., Ajay A., et al. An Introduction to Vision-Language Modeling[EB/OL]. arXiv preprint arXiv:2405.17247, 2024.
 
+Zhang C., Xu X., Wu J., et al. Adversarial Attacks of Vision Tasks in the Past 10 Years: A Survey[EB/OL]. arXiv preprint arXiv:2410.23687, 2024.
 
-An Introduction to Vision-Language Modeling
-
-Adversarial Attacks of Vision Tasks in the Past 10 Years: A Survey
-
-
-
-Towards adversarial attack on vision language pre-training models
-
-Boosting Transferability in Vision-Language Attacks via Diversification along the Intersection Region of Adversarial Trajectory.
-
-Transferable Diffusion-based Unrestricted Adversarial Attack on Pre-trained Vision-Language Models.
+# 3 现存问题与发展趋势
 
 
 
-给出对抗攻击的定义；介绍早期对抗攻击的逐步发展，主要介绍FGSM及其变种；
-
-参考文献：
-
-Intriguing Properties of Neural Networks
-
-Explaining and Harnessing Adversarial Examples
-
-Adversarial Examples in the Physical World
-
-Boosting Adversarial Attacks With Momentum
-
-Improving Transferability of Adversarial Examples With Input Diversity
-
-Evading Defenses to Transferable Adversarial Examples by Translation-Invariant Attacks
-
-Nesterov Accelerated Gradient and Scale Invariance for Adversarial Attacks
-
-Towards Deep Learning Models Resistant to Adversarial Attacks
-
-## 2.2 面向视觉语言模型的对抗攻击策略
-
-介绍随着发展对抗攻击拓展到了视觉语言模型；定义视觉语言模型上对抗攻击并解释它的多样性；介绍基础VLM对抗攻击设计方法；
-
-参考文献：
-
-Abusing Images and Sounds for Indirect Instruction Injection in Multi-Modal LLMs
-
-Are Aligned Neural Networks Adversarially Aligned?
-
-How Robust is Google’s Bard to Adversarial Image Attacks?
-
-On Evaluating Adversarial Robustness of VLMs
-
-On the Adversarial Robustness of Multi-Modal Foundation Models
-
-Visual Adversarial Examples Jailbreak Aligned LLMs
-
-An Image is Worth 1000 Lies
-
-Image Hijacks
-
-Adversarial Robustness for Visual Grounding of MLLMs
-
-# 3 面向视觉语言模型的对抗样本迁移性研究
-
-## 3.1 对抗样本迁移性的基础理论
-
-初步概述对抗攻击并引出迁移性；强调对抗样本迁移性的研究重要性；介绍data augmentation、optimization technique、loss objective、model component四类迁移性攻击；
-
-参考文献：
-
-Delving into transferable adversarial examples and black-box attacks.
-
-Improving transferability of adversarial examples with input diversity
-
-Evading Defenses to Transferable Adversarial Examples by Translation-Invariant Attacks
-
-Boosting adversarial attacks with momentum.
-
-A method for unconstrained convex minimization problem with the rate of convergence o(1/kˆ 2).
-
-Towards transferable targeted attack.
-
-Improving transferability of adversarial patches on face recognition with generative models.
-
-Transferable adversarial perturbations.
-
-Task-generalizable adversarial attack based on perceptual metric.
-
-## 3.2 面向视觉语言模型的对抗样本迁移性探索
-
-介绍从视觉模型发展到视觉语言模型对抗样本迁移的重要性；介绍迁移性的主体：模型和提示；
-
-参考文献：
-
-Transferable multimodal attack on vision-language pre-training models. 
-
-How Robust is Google’s Bard to Adversarial Image Attacks?
-
-On Evaluating Adversarial Robustness of VLMs
-
-An Image is Worth 1000 Lies
-
-Adversarial Robustness for Visual Grounding of MLLMs
-
-Visual Adversarial Examples Jailbreak Aligned LLMs
-
-# 4 现存问题与发展趋势
-
-
-
-# 5 结论
+# 4 结论
 
